[package]
name = "truncrate"
version = "0.1.2"
authors = ["Yotam Ofek <yotam.ofek@gmail.com>", "Galoz666 <yavinarba@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "truncate and split strings economically without breaking your characters, symbols, emojis etc."
repository = "https://github.com/yotamofek/trunc"
readme = "README.md"

[lib]
name = "truncrate"
path = "src/lib.rs"

[dependencies]
unicode-segmentation = "0.1.2"